# da_darksistem

./: best_model.pth  clean.csv  clean_base.csv  main.py  pyproject.toml  v1.ipynb  v2.ipynb
.gemini_scratch/: fix_categorical.py  read_ann_cells.py  read_nb.py  read_nb_v2.py  update_eda.py  update_v2.py  v2_cells.txt
